syntax = "proto3";

package learning_cards.v1;

import "google/protobuf/timestamp.proto";
import "learning_cards/v1/enum.proto";

option go_package = "github.com/iamvkosarev/learning-cards/pkg/proto/learning_cards/v1;learning_cards";

message GroupProgress {
    int64 group_id = 1;
    Mark mark = 2;
    google.protobuf.Timestamp last_review_time = 3;
}

message ListGroupsProgressRequest {
}

message ListGroupsProgressResponse {
    repeated GroupProgress group_progresses = 1;
}

message CardProgress {
    int64 card_id = 1;
    Mark mark = 2;
    google.protobuf.Timestamp last_review_time = 3;
}

message ListCardsProgressRequest {
    int64 group_id = 1;
}

message ListCardsProgressResponse {
    repeated CardProgress cards_progresses = 1;
}