syntax = "proto3";

package learning_cards.v1;

import "google/protobuf/duration.proto";
import "learning_cards/v1/card.proto";
import "learning_cards/v1/enum.proto";

option go_package = "github.com/iamvkosarev/learning-cards/pkg/proto/learning_cards/v1;learning_cards";


message GetGroupReviewInfoRequest {
    int64 group_id = 1;
}

message GetGroupReviewInfoResponse {
    int32 cards_count = 1;
}

message UpdateGroupReviewInfoRequest {
    int64 group_id = 1;
    int32 cards_count = 2;
}

message MakeReviewRequest {
    int64 group_id = 1;
}

message MakeReviewResponse {
    repeated Card cards = 1;
}
message ReviewCardResult {
    int64 card_id = 1;
    CardAnswer card_answer = 2;
    google.protobuf.Duration duration = 3;
}

message CompleteReviewRequest {
    int64 group_id = 1;
    repeated ReviewCardResult card_results = 2;
    bool check_duration = 3;
}